# terranova

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .qgis-plugin-ci  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  HANDOFF.md  INVENTORY.md  LICENSE  Makefile  NOTICE.md  PRIVACY.md  README.md  SECURITY.md  crowdin.yml  metadata.txt  mkdocs.yml  mypy.ini  package-lock.json  pyproject.toml  ruff.toml  symbology-style.db
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  i18n.yml  pages.yml  release.yml  security.yml
deploy/cloudflare-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
deploy/cloudflare-worker/src/: index.test.ts  index.ts
deploy/landing/: _headers  index.html  install.html  latest.json  styles.css
docs/: architecture.md  cli.md  development.md  index.md  installation.md  ml.md  onboarding_cole.md  phase4_deployment.md  quickstart.md  recipes.md  reviewer.md  risks.md  scp_migration.md  telemetry.md
docs/api/: index.md
docs/workflows/: classification.md  sam.md  timeseries.md
recipes/: crop_classification.yaml  deforestation_alert.yaml
samples/: LICENSES.md  README.md
scripts/: dump_schemas.py  fetch_sample.py  link_plugin.ps1  sync_version.py
src/terranova/: __init__.py  api.py  bridge.py  config.py  metadata.txt  plugin.py  version.py
src/terranova/cli/: __init__.py  __main__.py  main.py
src/terranova/controllers/: _heartbeat.py  _keepalive.py  accuracy.py  canvas.py  catalog.py  cdse.py  classify.py  dispatch.py  foundation.py  labeling.py  layers.py  sam.py  timeseries.py  training.py
src/terranova/core/: __init__.py  errors.py  models.py  update_check.py
src/terranova/i18n/: README.md  fr.ts
src/terranova/processing/: __init__.py  indices_algs.py  ndvi_alg.py  postprocess_algs.py  provider.py
src/terrascope/: __init__.py  api.py  bridge.py  config.py  plugin.py  version.py
tests/: conftest.py
tests/integration/: test_plugin_loads.py
tests/unit/: test_accuracy.py  test_accuracy_report.py  test_action_handlers_exist.py  test_api.py  test_bandset.py  test_bbox.py  test_bfast_cusum.py  test_catalog_controller.py  test_cdse.py  test_classical.py  test_cli.py  test_config.py  test_core_purity.py  test_dispatch.py  test_dms_parse.py  test_errors.py  test_feature_flags.py  test_hashing.py  test_indices.py  test_indices_properties.py  test_inference.py  test_landtrendr.py  test_lazy_composite.py  test_logging.py  test_metadata_txt.py  test_models.py  test_naming.py  test_parallel.py  test_postprocess.py  test_progress.py  test_project_state.py  test_pyproject.py  test_read_window.py  test_recipes.py  test_region_grow.py  test_reproject.py  test_sensors.py  test_telemetry.py  test_timing.py  test_update_check.py  (+1 more)
web/: index.html  style.css
web/screenshots/: README.md
(+214 files in other folders)
